apps/base/freshrss/freshrss-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  annotations:
    gethomepage.dev/href: "https://${HOSTNAME:=freshrss.hephaestus.markmk.com}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "FreshRSS"
    gethomepage.dev/description: "News aggregator"
    gethomepage.dev/app: freshrss
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/freshrss.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOSTNAME:=freshrss.hephaestus.markmk.com}`) 
      kind: Rule
      services:
        - name: freshrss
          port: 8080
          namespace: freshrss
      middlewares:
        - name: tinyauth
          namespace: tinyauth
